fabrique-derive/tests/ui/persistable/fail/derive_persistable_on_unit_struct.stderr
error: Factory can only be derived from named structs, unit struct given
 --> tests/ui/persistable/fail/derive_persistable_on_unit_struct.rs:4:1
  |
4 | struct Anvil;
  | ^^^^^^
